[Notion-3] fix dockerfile and gradle